--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -58,18 +58,24 @@
                 <span class="status-label">Platform:</span>
                 <span id="statusPlatform" class="status-value">-</span>
               </div>
-              <div class="status-row">
-                <span class="status-label">Current Step:</span>
-                <span id="statusStep" class="status-value">Idle</span>
-              </div>
-              <div class="status-row">
-                <span class="status-label"></span>
-                <span id="statusProgress" class="status-value">0</span>
+              <!-- Thin Progress Bar with Current Step -->
+              <div class="progress-container">
+                <div class="progress-header">
+                  <span id="statusStep" class="progress-current-step">Idle</span>
+                  <span id="progressPercentage" class="progress-percentage">0%</span>
+                </div>
+                <div id="progressBar" class="progress-bar">
+                  <div id="progressBarFill" class="progress-bar-fill"></div>
+                </div>
+                <div class="progress-stats">
+                  <span id="progressStats" class="progress-stats-text">0 jobs processed</span>
+                  <span id="progressETA" class="progress-eta">--</span>
+                </div>
               </div>
             </div>
             
             <div class="webview-container-full">
-              <webview id="scrapingView" partition="persist:scraping" src="about:blank" allowpopups style="width: 100%; height: 100%; border: 2px solid #4CAF50; border-radius: 4px; background: #1e1e1e;"></webview>
+              <webview id="scrapingView" partition="persist:scraping" src="about:blank" allowpopups useragent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36" style="width: 100%; height: 100%; border: 2px solid #4CAF50; border-radius: 4px; background: #1e1e1e;"></webview>
             </div>
           </div>
         </div>
@@ -97,6 +103,8 @@
           </div>
           
           <div class="bulk-actions">
+            <button id="selectAllBtn" class="btn btn-info">☑️ Select All</button>
+            <div class="bulk-divider"></div>
             <button id="copySelectedBtn" class="btn btn-success" disabled>📋 Copy Selected</button>
             <button id="deleteSelectedBtn" class="btn btn-danger" disabled>🗑️ Delete Selected</button>
             <button id="markAppliedBtn" class="btn btn-primary" disabled>✓ Mark as Applied</button>
@@ -234,6 +242,28 @@
               </div>
             </div>
 
+            <!-- Salary Filter -->
+            <div class="settings-section">
+              <h3>💰 Minimum Salary Requirements</h3>
+              <p class="help-text">Only save jobs that meet or exceed your minimum salary. If salary is "Not specified", job will be saved regardless.</p>
+              <div class="salary-inputs">
+                <div class="salary-input-group">
+                  <label for="minSalaryAnnual">Annual ($/year):</label>
+                  <input type="number" id="minSalaryAnnual" placeholder="120000" value="120000" class="form-control" min="0" step="1000">
+                </div>
+                <div class="salary-input-group">
+                  <label for="minSalaryMonthly">Monthly ($/month):</label>
+                  <input type="number" id="minSalaryMonthly" placeholder="10000" class="form-control" min="0" step="500">
+                  <span class="help-text-inline">(Leave empty if using annual)</span>
+                </div>
+                <div class="salary-input-group">
+                  <label for="minSalaryHourly">Hourly ($/hour):</label>
+                  <input type="number" id="minSalaryHourly" placeholder="58" class="form-control" min="0" step="1">
+                  <span class="help-text-inline">(Leave empty if using annual)</span>
+                </div>
+              </div>
+            </div>
+
             <div class="form-actions">
               <button id="saveSettingsBtn" class="btn btn-success">💾 Save All Settings</button>
             </div>
@@ -250,7 +280,7 @@
         <h3>💬 ChatGPT Assistant</h3>
         <button id="refreshChatGPT" class="btn-icon" title="Refresh ChatGPT">🔄</button>
       </div>
-      <webview id="chatgptView" src="https://chatgpt.com" partition="persist:chatgpt" style="width: 100%; height: calc(100% - 50px);"></webview>
+      <webview id="chatgptView" src="https://chatgpt.com" partition="persist:chatgpt" useragent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36" style="width: 100%; height: calc(100% - 50px);"></webview>
     </div>
     </div> <!-- End content-wrapper -->
   </div> <!-- End app-container -->
