Add work experience summary field to resume form
Features:
- Added work_experience field to resumes table
- New textarea in resume add form for work experience summary
- Each resume can store its own work experience notes
- Displayed in resume card with formatted pre block
- Helps track what experience is highlighted in each resume version

UI Updates:
- Work Experience Summary textarea (4 rows, optional)
- Shows bullet points and formatting
- Displayed in resume card below tech stack
- Clean, readable formatting with dark theme styling

Use Case:
- User creates 'Full Stack Resume'
- Adds summary: 'â€¢ Lead Developer at ABC (2020-2023) - React/Node projects'
- Different resume can list different experiences/focus
- Quick reference for what's in each resume file

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -304,6 +304,12 @@
             </div>
             
             <div class="form-group full-width">
+              <label for="newResumeWorkExperience">Work Experience Summary (Optional)</label>
+              <textarea id="newResumeWorkExperience" class="form-control" rows="4" placeholder="List key positions and achievements highlighted in this resume...&#10;Example:&#10;• Senior Developer at ABC Corp (2020-2023) - Led React migration&#10;• Backend Engineer at XYZ Inc (2018-2020) - Built microservices"></textarea>
+              <span class="help-text">Summarize the work experience highlighted in this resume version</span>
+            </div>
+            
+            <div class="form-group full-width">
               <label class="checkbox-label">
                 <input type="checkbox" id="newResumeIsPrimary">
                 <span>Set as primary resume (default for all jobs)</span>
