Auto-detect tech stack from resume label and work experience
Changes:
- Removed manual Tech Stack input field
- AI auto-extracts tech stack from:
  * Resume label (e.g., 'Full Stack Developer' â†’ extracts React, Node.js)
  * Work experience roles and fields
  * Work experience descriptions
- Matches 35+ common technologies automatically
- Falls back to label if no techs detected
- Shows detected tech stack in success notification

Tech Detection:
- Frontend: React, Vue, Angular, JavaScript, TypeScript
- Backend: Node.js, Python, Django, Flask, Express, Ruby, Rails, PHP, Laravel
- Mobile: React Native, Flutter, iOS, Android, Swift, Kotlin
- Databases: MongoDB, PostgreSQL, MySQL, Redis
- DevOps: AWS, Azure, GCP, Docker, Kubernetes
- Languages: Java, Go, Rust, C++, C#, .NET, Spring

Benefits:
- Simpler form (one less required field)
- Smarter AI-based detection
- No manual tech stack entry needed
- Automatically keeps tech stack updated with experiences
- Better user experience

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -273,16 +273,10 @@
         <div class="resume-add-form">
           <h4>➕ Add New Resume</h4>
           <div class="form-grid">
-            <div class="form-group">
+            <div class="form-group full-width">
               <label for="newResumeLabel">Resume Label *</label>
-              <input type="text" id="newResumeLabel" class="form-control" placeholder="e.g., Full Stack Resume">
-              <span class="help-text">Descriptive name for this resume</span>
-            </div>
-            
-            <div class="form-group">
-              <label for="newResumeTechStack">Tech Stack *</label>
-              <input type="text" id="newResumeTechStack" class="form-control" placeholder="e.g., React, Node.js, TypeScript">
-              <span class="help-text">Comma-separated technologies (for AI matching)</span>
+              <input type="text" id="newResumeLabel" class="form-control" placeholder="e.g., Full Stack Developer, Backend Engineer, Frontend Specialist">
+              <span class="help-text">AI will analyze your resume and work experience to extract tech stack automatically</span>
             </div>
             
             <div class="form-group full-width">
