--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1100,7 +1100,7 @@
 
   <!-- Edit Resume Modal -->
   <div id="editResumeModal" class="modal-overlay" style="display: none;">
-    <div class="modal-content" style="max-width: 600px;">
+    <div class="modal-content" style="max-width: 800px; max-height: 90vh; overflow-y: auto;">
       <div class="modal-header">
         <h3>✏️ Edit Resume</h3>
         <button class="modal-close-btn" onclick="closeEditResumeModal()">×</button>
@@ -1123,6 +1123,44 @@
             <input type="checkbox" id="editResumeIsPrimary">
             <span>Set as Primary Resume</span>
           </label>
+        </div>
+
+        <!-- Work Experiences Section -->
+        <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid #3d3d3d;">
+          <h4 style="margin-bottom: 15px;">💼 Work Experiences</h4>
+          
+          <!-- Add New Experience Form -->
+          <div class="work-exp-form" style="background: #2a2a2a; padding: 12px; border-radius: 6px; margin-bottom: 15px;">
+            <h5 style="font-size: 13px; margin-bottom: 10px;">Add New Experience</h5>
+            <div class="form-grid">
+              <div class="form-group">
+                <label>Company</label>
+                <input type="text" id="editExpCompany" class="form-control" placeholder="Company name">
+              </div>
+              <div class="form-group">
+                <label>Role</label>
+                <input type="text" id="editExpRole" class="form-control" placeholder="Job title">
+              </div>
+              <div class="form-group">
+                <label>Period</label>
+                <input type="text" id="editExpPeriod" class="form-control" placeholder="e.g., 2020-2022">
+              </div>
+              <div class="form-group">
+                <label>Field</label>
+                <input type="text" id="editExpField" class="form-control" placeholder="e.g., Frontend Development">
+              </div>
+            </div>
+            <div class="form-group">
+              <label>Description</label>
+              <textarea id="editExpDescription" class="form-textarea" rows="2" placeholder="Brief description of responsibilities and achievements"></textarea>
+            </div>
+            <button type="button" class="btn btn-secondary btn-sm" onclick="addEditExperience()">+ Add Experience</button>
+          </div>
+
+          <!-- Existing Experiences List -->
+          <div id="editResumeExpList" style="display: flex; flex-direction: column; gap: 10px;">
+            <!-- Experiences will be rendered here -->
+          </div>
         </div>
       </div>
       <div class="modal-footer">
