--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -38,6 +38,10 @@
             <span class="tab-icon">👤</span>
             <span class="tab-label">Profile</span>
           </button>
+          <button class="tab-btn-vertical" data-tab="chat">
+            <span class="tab-icon">🤖</span>
+            <span class="tab-label">AI Chat</span>
+          </button>
           <button class="tab-btn-vertical" data-tab="apply">
             <span class="tab-icon">📝</span>
             <span class="tab-label">Job Apply</span>
@@ -544,6 +548,39 @@
     <div id="profileStatus" class="status-message"></div>
   </div>
 </div>
+
+        <!-- AI Chat Tab -->
+        <div id="chat-tab" class="tab-pane">
+          <div class="chat-container">
+            <div class="chat-header">
+              <h2>🤖 AI Chat with Llama</h2>
+              <div class="chat-status">
+                <span id="chatStatus" class="status-indicator">● Connecting...</span>
+              </div>
+            </div>
+            
+            <div class="chat-messages" id="chatMessages">
+              <div class="chat-message ai-message">
+                <div class="message-avatar">🤖</div>
+                <div class="message-content">
+                  <div class="message-text">Hello! I'm your AI assistant powered by Llama. How can I help you today?</div>
+                  <div class="message-time" id="chatTime">Just now</div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="chat-input-container">
+              <div class="chat-input-wrapper">
+                <textarea id="chatInput" class="chat-input" placeholder="Type your message here..." rows="1"></textarea>
+                <button id="chatSendBtn" class="chat-send-btn">Send</button>
+              </div>
+              <div class="chat-controls">
+                <button id="chatClearBtn" class="btn btn-secondary btn-sm">Clear Chat</button>
+                <span id="chatTyping" class="typing-indicator">AI is typing...</span>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- Cookies Tab -->
         <div id="cookies-tab" class="tab-pane">
