Add thinking animation and fix text formatting
âœ¨ Features Added:
- Animated thinking dots in both typing indicator and chat bubble
- Thinking message bubble appears in chat during AI processing
- Smooth bounce animation for thinking dots

ðŸ› Bug Fixes:
- Fix text formatting to preserve \\n (newlines) and \\t (tabs)
- Convert newlines to <br> tags for proper display
- Convert tabs to 4 non-breaking spaces for indentation

ðŸŽ¨ Visual Improvements:
- Thinking message has subtle styling to differentiate from regular messages
- Animated dots with staggered timing for visual appeal
- Proper cleanup of thinking messages when AI responds

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -576,7 +576,14 @@
               </div>
               <div class="chat-controls">
                 <button id="chatClearBtn" class="btn btn-secondary btn-sm">Clear Chat</button>
-                <span id="chatTyping" class="typing-indicator">AI is typing...</span>
+                <span id="chatTyping" class="typing-indicator">
+                  <span class="typing-text">AI is thinking</span>
+                  <span class="typing-dots">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                  </span>
+                </span>
               </div>
             </div>
           </div>
