feat(ui): add Jobright cookie sets manager (add/list/rotate) in Cookies tab

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -620,6 +620,26 @@
             </div>
 
             <div id="cookieStatus" class="status-message"></div>
+
+            <!-- Jobright Multi-Cookie Sets -->
+            <div class="settings-section" style="margin-top: 24px;">
+              <h3>🍪 Jobright Cookie Sets (Rotation)</h3>
+              <p class="help-text">Manage multiple Jobright cookie sets. The scraper will auto-rotate if a set is limited.</p>
+              <div class="input-group" style="margin-bottom: 8px;">
+                <input type="text" id="jrCookieLabel" placeholder="Label (e.g., Account 1)" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="jrCookieJson">Jobright Cookie JSON:</label>
+                <textarea id="jrCookieJson" class="form-textarea" rows="6" placeholder='[{"name":"session","value":"...","domain":".jobright.ai","path":"/"}]'></textarea>
+              </div>
+              <div class="form-actions">
+                <button id="addJRCookieSetBtn" class="btn btn-primary">+ Add Cookie Set</button>
+                <button id="listJRCookieSetsBtn" class="btn btn-secondary">🔄 Refresh List</button>
+                <button id="rotateJRCookieSetBtn" class="btn btn-info">🔁 Rotate Active</button>
+              </div>
+              <div id="jrCookieSetsStatus" class="status-message"></div>
+              <div id="jrCookieSetsList" class="list-container"></div>
+            </div>
           </div>
         </div>
 
