style(cookies): cute Jobright cookie sets UI with cards, badges, mini actions

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -638,7 +638,7 @@
                 <button id="rotateJRCookieSetBtn" class="btn btn-info">🔁 Rotate Active</button>
               </div>
               <div id="jrCookieSetsStatus" class="status-message"></div>
-              <div id="jrCookieSetsList" class="list-container"></div>
+              <div id="jrCookieSetsList" class="jr-sets-grid"></div>
             </div>
           </div>
         </div>
