--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -630,7 +630,7 @@
               </div>
               <div class="form-group">
                 <label for="jrCookieJson">Cookie JSON:</label>
-                <textarea id="jrCookieJson" class="form-textarea" rows="6" placeholder='[{"name":"session","value":"...","domain":".jobright.ai","path":"/"}]'></textarea>
+                <textarea id="jrCookieJson" class="form-textarea" rows="6" placeholder='[{"name":"session","value":"...","domain":".example.com","path":"/"}]'></textarea>
               </div>
               <div class="form-actions">
                 <button id="addJRCookieSetBtn" class="btn btn-primary">+ Add Cookie Set</button>
