feat(cookies): generalize cookie sets UI to any platform via selector; update labels

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -629,7 +629,7 @@
                 <input type="text" id="jrCookieLabel" placeholder="Label (e.g., Account 1)" class="form-control">
               </div>
               <div class="form-group">
-                <label for="jrCookieJson">Cookie JSON:</label>
+                <label for="jrCookieJson"><span id="csPlatformLabel3">Jobright</span> Cookie JSON:</label>
                 <textarea id="jrCookieJson" class="form-textarea" rows="6" placeholder='[{"name":"session","value":"...","domain":".example.com","path":"/"}]'></textarea>
               </div>
               <div class="form-actions">
