--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -128,6 +128,7 @@
               <option value="RemoteOK">RemoteOK</option>
               <option value="WeWorkRemotely">WeWorkRemotely</option>
               <option value="Jungle">Jungle</option>
+              <option value="Rocketship">Rocketship</option>
             </select>
             <select id="appliedFilter" class="filter-select">
               <option value="not-applied">Not Applied</option>
@@ -607,6 +608,7 @@
                 <option value="RemoteOK">RemoteOK</option>
                 <option value="WeWorkRemotely">WeWorkRemotely</option>
                 <option value="Jungle">Jungle</option>
+                <option value="Rocketship">Rocketship</option>
               </select>
             </div>
 
@@ -729,6 +731,7 @@
                   <option value="RemoteOK">RemoteOK</option>
                   <option value="WeWorkRemotely">WeWorkRemotely</option>
                   <option value="Jungle">Jungle</option>
+                  <option value="Rocketship">Rocketship</option>
                 </select>
               </div>
               
