--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -631,6 +631,7 @@
                 <button id="saveCookiesBtn" class="btn btn-primary" type="button">💾 Save Set</button>
                 <button id="loadCookiesBtn" class="btn btn-secondary" type="button">🔄 Refresh List</button>
                 <button id="testCookiesBtn" class="btn btn-info" type="button">🧪 Test JSON</button>
+                <button id="migrateCookiesBtn" class="btn btn-warning" type="button">⬆️ Migrate Legacy Cookies</button>
               </div>
             </div>
 
